--- a/RealEstateApp/RealEstateApp.csproj
+++ b/RealEstateApp/RealEstateApp.csproj
@@ -55,6 +55,7 @@
 	<ItemGroup>
 	  <None Remove="Resources\Fonts\fa-solid-900.ttf" />
 	  <None Remove="Resources\Images\fa_sort_amount_asc.png" />
+	  <None Remove="Resources\Images\lightbulb_solid.svg" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -80,6 +81,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="ContentViews\HeaderView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\AboutPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
