Almost completed HeightCalculator.

--- a/RealEstateApp/RealEstateApp.csproj
+++ b/RealEstateApp/RealEstateApp.csproj
@@ -54,6 +54,7 @@
 
 	<ItemGroup>
 	  <None Remove="Resources\Fonts\fa-solid-900.ttf" />
+	  <None Remove="Resources\Images\compass.png" />
 	  <None Remove="Resources\Images\fa_sort_amount_asc.png" />
 	  <None Remove="Resources\Images\lightbulb_solid.svg" />
 	</ItemGroup>
@@ -88,6 +89,12 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\AddEditPropertyPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\CompassPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\HeightCalculatorPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\PropertyDetailPage.xaml">
