--- a/RealEstateApp/RealEstateApp.csproj
+++ b/RealEstateApp/RealEstateApp.csproj
@@ -89,6 +89,7 @@
 	  <None Remove="Resources\Images\compass.png" />
 	  <None Remove="Resources\Images\fa_sort_amount_asc.png" />
 	  <None Remove="Resources\Images\lightbulb_solid.svg" />
+	  <None Remove="Resources\Images\no_image.jpg" />
 	</ItemGroup>
 
 	<ItemGroup>
