--- a/RealEstateApp/RealEstateApp.csproj
+++ b/RealEstateApp/RealEstateApp.csproj
@@ -130,6 +130,9 @@
 	  <MauiXaml Update="Views\HeightCalculatorPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\ImageListPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\PropertyDetailPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
